
syntax = "proto3";

option csharp_namespace = "Built.Grpc.ContractsSample1.HelloApiDemo";
package HelloApiDemo;
import "google/api/annotations.proto";
// The service definition.
service Get {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
	option (google.api.http).get = "/v1/messages/{name}";
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
